Added Google Test Framework with fake example test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,19 @@ project(minimum-spanning-tree
     DESCRIPTION "Find minimum spanning tree in given social web with weights."
     HOMEPAGE_URL "https://github.com/przemek83/minimum-spanning-tree")
 
+# Gtest / Gmock
+configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
+
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/googletest-download )
+
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+add_subdirectory(${CMAKE_BINARY_DIR}/googletest-src 
+    ${CMAKE_BINARY_DIR}/googletest-build)
+
 configure_file(${CMAKE_SOURCE_DIR}/testFile.txt 
     ${CMAKE_BINARY_DIR}/testFile.txt COPYONLY)
 
@@ -14,3 +27,6 @@ set(${PROJECT_NAME}_SOURCES
     )
 
 add_executable(${CMAKE_PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
+
+enable_testing()
+add_subdirectory(test)
